# GigaUp

./: CLAUDE.md  INSTALLATION.md  MODELS_REFERENCE.md  README.md  available_models.md  config_hf.json  config_rc.json  debug_gigapixel_ui.py  debug_scale_input.py  debug_ui_elements.py  fix_model_params.py  install_v2_files.py  install_windows.bat  interactive_scale_test.py  package_v2_files.py  params.json  pyproject.toml  run_cli.py  run_gui.py  run_gui_mock.py  run_gui_mock_standalone.py  setup.py  test_custom_scale.py  test_gui_mock.py  update_models.py
docs/: NEW_FEATURES.md
examples/: config_sample.json  preset_mode_config.json
gigapixel/: __init__.py  cli.py  factory.py  gigapixel.py  models.py  parameters.py  suffix_generator.py
gigapixel/gui/: __init__.py  main_window.py  utils.py  widgets.py
